--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,9 @@ tr {
     height: 20px;
     width: 20px;
 }
+.add-button {
+    background-color: #008cba;
+    color: white;
+    height: 20px;
+    width: 20px;
+}
