--- a/styles.css
+++ b/styles.css
@@ -45,34 +45,36 @@ tr {
     display: flex;
     gap: 10px;
     cursor: pointer;
+    color: white;
+    justify-content: center;
 }
 .edit-button {
     background-color: #008cba;
     color: white;
-    height: 20px;
-    width: 20px;
+    height: 23px;
+    width: 25px;
 }
 .delete-button {
     background-color: #c94c4c;
     color: white;
-    height: 20px;
-    width: 20px;
+    height: 23px;
+    width: 25px;
 }
 .cancel-button {
     background-color: #c94c4c;
     color: white;
-    height: 20px;
-    width: 20px;
+    height: 23px;
+    width: 25px;
 }
 .save-button {
     background-color: #008cba;
     color: white;
-    height: 20px;
-    width: 20px;
+    height: 23px;
+    width: 25px;
 }
 .add-button {
     background-color: #008cba;
     color: white;
-    height: 20px;
-    width: 20px;
+    height: 23px;
+    width: 25px;
 }
